--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/seguimiento-tecnico/seguimiento-tecnico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/seguimiento-tecnico/seguimiento-tecnico.component.html
@@ -1,1 +1,110 @@
-<p>seguimiento-tecnico works!</p>
+<section class="container">
+  <div class="container text-center">
+    <div class="text-right">
+      <a routerLink="../../.." mat-button color="primary" class="btn-regresar print-d-none">
+        <img src="assets/img/icon/regresar.svg" alt="Regresar">
+      </a>
+    </div>
+    <h1 class="title-menu--h1">
+      Seguimiento técnico {{ dataSeguimiento?.infoProyecto?.llaveMen }}
+    </h1>
+  </div>
+
+  <mat-card class="shipping-card var-main-gris">
+    <mat-card-content>
+        <p>
+          <strong>
+            Institución Educativa:
+          </strong>
+          {{ this.dataSeguimiento?.infoProyecto?.institucionEducativa }}
+        </p>
+        <p>
+          <strong>
+            Sede:
+          </strong>
+          {{ this.dataSeguimiento?.infoProyecto?.sede }}
+        </p>
+        <p>
+          <strong>
+            Tipo de intervención:
+          </strong>
+          {{ this.dataSeguimiento?.infoProyecto?.tipoIntervencion }}
+        </p>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-accordion [multi]="openAcordeon == true">
+    <mat-expansion-panel class="expansion-style" [expanded]="openAcordeon == true">
+      <mat-expansion-panel-header class="expansion-style--header">
+        <mat-panel-title class="expansion-style--title">
+          Seguimiento diario
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+
+      <div class="table-responsive">
+        <table mat-table [dataSource]="dataSeguimientoObra?.seguimientoTecnico?.seguimientoDiario" matSort class="mat-elevation-z8 table-form table-gris">
+          <ng-container matColumnDef="fechaSeguimiento">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de registro</th>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element?.fechaSeguimiento | date: 'dd/MM/yyyy' }} </td>
+          </ng-container>
+          <ng-container matColumnDef="disponibilidadPersonal">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Disponibilidad de personal</th>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element?.disponibilidadPersonal }} </td>
+          </ng-container>
+          <ng-container matColumnDef="disponibilidadMaterial">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Disponibilidad de material</th>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element?.disponibilidadMaterial  }} </td>
+          </ng-container>
+          <ng-container matColumnDef="disponibilidadEquipo">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Disponibilidad de equipo</th>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element?.disponibilidadEquipo }} </td>
+          </ng-container>
+          <ng-container matColumnDef="productividad">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Productividad</th>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element?.productividad }} </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsDiario"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsDiario"></tr>
+        </table>
+      </div>
+    </mat-expansion-panel>
+    <mat-expansion-panel class="expansion-style" [expanded]="openAcordeon == true">
+      <mat-expansion-panel-header class="expansion-style--header">
+        <mat-panel-title class="expansion-style--title">
+          Seguimiento semanal
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+
+      <div class="table-responsive">
+        <table mat-table [dataSource]="dataSeguimientoObra?.seguimientoTecnico?.seguimientoSemanal" matSort class="mat-elevation-z8 table-form table-gris">
+          <ng-container matColumnDef="numeroSemana">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Semana No.</th>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element?.numeroSemana }} </td>
+          </ng-container>
+          <ng-container matColumnDef="periodo">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Período del reporte</th>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element?.fechaInicio | date: 'dd/MM/yyyy'}} - {{ element?.fechaFin | date: 'dd/MM/yyyy'}} </td>
+          </ng-container>
+          <ng-container matColumnDef="estadoObra">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado de la obra</th>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element?.estadoObra }} </td>
+          </ng-container>
+          <ng-container matColumnDef="programacionObra">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Programación de obra acumulada</th>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element?.programacionObra }}% </td>
+          </ng-container>
+          <ng-container matColumnDef="avanceFisico">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Avance físico acumulado ejecutado</th>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element?.avanceFisico }}% </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsSemanal"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsSemanal"></tr>
+        </table>
+      </div>
+
+    </mat-expansion-panel>
+  </mat-accordion>
+  <div class="text-center mt-2em mb-2em print-d-none">
+    <button mat-raised-button color="accent" (click)="downloadPDF();">Descargar</button>
+  </div>
+</section>
