--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/contratacion-p/contratacion-p.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/contratacion-p/contratacion-p.component.html
@@ -1,7 +1,7 @@
 <section class="container">
   <div class="container text-center">
     <div class="text-right">
-      <a routerLink="../../.." mat-button color="primary" class="btn-regresar">
+      <a routerLink="../../.." mat-button color="primary" class="btn-regresar print-d-none">
         <img src="assets/img/icon/regresar.svg" alt="Regresar">
       </a>
     </div>
