--- a/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-contratacion/form-contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-contratacion/form-contratacion.component.html
@@ -18,8 +18,8 @@
     <mat-card class="border">
       <mat-card-content>
         <div>
-          <p><b>Número de comité técnico</b>: {{ contratacion?.sesionComiteSolicitud[0].comiteTecnico.numeroComite }} </p>
-          <p><b>Fecha de comité técnico</b>: {{ contratacion?.sesionComiteSolicitud[0].comiteTecnico.fechaOrdenDia | date: 'dd/MM/yyyy' }} </p>
+          <p><b>Número de comité técnico</b>: {{ contratacion?.sesionComiteSolicitud[0]?.comiteTecnico?.numeroComite }} </p>
+          <p><b>Fecha de comité técnico</b>: {{ contratacion?.sesionComiteSolicitud[0]?.comiteTecnico?.fechaOrdenDia | date: 'dd/MM/yyyy' }} </p>
         </div>
         <div >
           <p><b>Número de comité fiduciario</b>: {{ contratacion?.sesionComiteSolicitud[0]?.comiteTecnicoFiduciario?.numeroComite }} </p>
