Fix código opc contratar detalle ddp solicitud

--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/detalle-disponibilidad-presupuestal/detalle-disponibilidad-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/detalle-disponibilidad-presupuestal/detalle-disponibilidad-presupuestal.component.html
@@ -72,8 +72,8 @@
                                 </p>
                                 <p>
                                     <b>Valor del aportante:</b>
-                                    <span *ngIf="opcionContratarCodigo=='Interventoria'">{{ aportante.valorInterventoria | currency }}</span>
-                                    <span *ngIf="opcionContratarCodigo!='Interventoria'">{{ aportante.valorObra | currency }}</span>
+                                    <span *ngIf="opcionContratarCodigo=='2'">{{ aportante.valorInterventoria | currency }}</span>
+                                    <span *ngIf="opcionContratarCodigo=='1'">{{ aportante.valorObra | currency }}</span>
 
                                 </p>
                             </div>
