--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/dialog-env-solicitud-autoriz/dialog-env-solicitud-autoriz.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/dialog-env-solicitud-autoriz/dialog-env-solicitud-autoriz.component.html
@@ -115,7 +115,7 @@
                     color="accent"
                     class="btn-dialog"
                     type="submit"
-                    [disabled]="addressForm.dirty === false">
+                    [disabled]="!addressForm.valid">
                     Enviar para trámite en financiera
             </button>
         </div>
